--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -18,7 +18,7 @@ $primary-color: #1eaedb !default;
 $secondary-color: lighten($dark-grey, 13.5%) !default;
 $border-color: #bbb !default;
 $link-color: #1eaedb !default;
-$font-color: #222 !default;
+$font-color: #22313F !default;
 
 $font-mobile-nav-color: #ffffff !default;
 $mobile-nav-bg-transparent: rgba(30,174,219, 0.9);
