--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -29,3 +29,15 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0;       }
 p {
   margin-top: 0;
 }
+
+.main_copy{
+  font-family: muli;
+  font-size: 2rem;
+}
+
+.main_copy_mobile_section{
+padding-top: 15%;
+font-family: muli;
+font-size: 2rem;
+
+}
