--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -17,10 +17,15 @@
 
 #nav_primary a {
  text-decoration: none;
+ 
+ &:active {
+   color: $font-color;
+   text-decoration: none;
+ }
 }
 
 #nav_primary a:hover {
- text-decoration: underline;
+ text-decoration: none;
 }
 /*
 #nav_mobile {
@@ -75,7 +80,7 @@ The Overlay (background) */
 /* Position the content inside the overlay */
 .overlay-content {
     position: relative;
-    top: 25%; /* 25% from the top */
+    top: 10%; /* 25% from the top */
     width: 100%; /* 100% width */
     text-align: center; /* Centered text/links */
     margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
@@ -100,7 +105,7 @@ The Overlay (background) */
 .closebtn {
     position: absolute;
     top: -20px;
-    right: 8px;
+    right: 20px;
     font-size: 60px !important; /* Override the font-size specified earlier (36px) for all navigation links */
 }
 
